# brainfrick

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: bench.rs
examples/: tictactoe.rs
src/: error.rs  execute.rs  lib.rs  mem.rs  parse.rs  run.rs  step.rs
src/func/: execute.rs  mod.rs  parse.rs
tests/: 1234.txt  array_size_left.bf  array_size_right.bf  purpzie_sucks.bf  tests.rs
