[package]
name = "brainfrick"
version = "1.0.0" # remember to change html_root_url
description = "An optimizing brainfuck interpreter with helpful errors."
repository = "https://github.com/Purpzie/brainfrick"
authors = ["Purpzie"]
keywords = ["brainfuck", "brainfrick", "interpreter"]
categories = ["parser-implementations", "parsing"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
itertools = "^0.9.0"
