[package]
name = "brainfrick"
version = "2.0.0"
description = "An optimizing brainfuck interpreter"
license = "MIT"
authors = ["Purpzie"]
repository = "https://github.com/purpzie/brainfrick"
include = ["src", "README.md", "LICENSE"]
edition = "2021"

[features]
debug-char = []

[dev-dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
harness = false
name = "bench"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
